parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program_a program_c program_d main
Rule 2     program_a -> program_b program_a
Rule 3     program_a -> empty
Rule 4     program_b -> let
Rule 5     program_b -> class
Rule 6     program_c -> var program_c
Rule 7     program_c -> empty
Rule 8     program_d -> function program_d
Rule 9     program_d -> empty
Rule 10    type -> LC CTE_I RC LC CTE_I RC atomic
Rule 11    type -> LC CTE_I RC atomic
Rule 12    type -> atomic
Rule 13    type -> ID
Rule 14    atomic -> INT
Rule 15    atomic -> FLOAT
Rule 16    atomic -> BOOL
Rule 17    var -> VAR ID COL type var_a SEMICOL
Rule 18    var_a -> IS var_b
Rule 19    var_a -> empty
Rule 20    var_b -> CTE_I
Rule 21    var_b -> CTE_F
Rule 22    var_b -> CTE_B
Rule 23    let -> LET ID COL type IS var_b SEMICOL
Rule 24    main -> MAIN LP RP function_block
Rule 25    function -> FUNCTION ID LP params RP function_a function_block
Rule 26    function_a -> ARROW type
Rule 27    function_a -> empty
Rule 28    params -> ID COL type params_a
Rule 29    params -> empty
Rule 30    params_a -> COMMA params
Rule 31    params_a -> empty
Rule 32    block -> LB block_a RB
Rule 33    block_a -> statute block_a
Rule 34    block_a -> empty
Rule 35    function_block -> LB function_block_a block_a RB
Rule 36    function_block_a -> function_block_b function_block_a
Rule 37    function_block_a -> empty
Rule 38    function_block_b -> var
Rule 39    function_block_b -> let
Rule 40    class -> CLASS ID class_a LB class_b init class_c class_d RB
Rule 41    class_a -> COL ID
Rule 42    class_a -> empty
Rule 43    class_b -> class_e class_f class_b
Rule 44    class_b -> empty
Rule 45    class_e -> PRIVATE
Rule 46    class_e -> empty
Rule 47    class_f -> var
Rule 48    class_f -> let
Rule 49    class_c -> init class_c
Rule 50    class_c -> empty
Rule 51    class_d -> class_e function class_d
Rule 52    class_d -> empty
Rule 53    init -> INIT LP params RP block
Rule 54    statute -> print
Rule 55    statute -> input
Rule 56    statute -> assignment
Rule 57    statute -> condition
Rule 58    statute -> loop
Rule 59    statute -> call_function
Rule 60    statute -> return
Rule 61    return -> RETURN expression SEMICOL
Rule 62    assignment -> ID array attribute IS expression SEMICOL
Rule 63    print -> PRINT LP print_a RP SEMICOL
Rule 64    print_a -> expression
Rule 65    print_a -> CTE_S
Rule 66    print_a -> empty
Rule 67    input -> INPUT LP ID array attribute RP SEMICOL
Rule 68    loop -> WHILE expression block
Rule 69    call_function -> ID LP call_params RP SEMICOL
Rule 70    call_params -> expression call_params_a
Rule 71    call_params -> empty
Rule 72    call_params_a -> COMMA expression call_params_a
Rule 73    call_params_a -> empty
Rule 74    condition -> IF expression block condition_a condition_b
Rule 75    condition_a -> elseif condition_a
Rule 76    condition_a -> empty
Rule 77    condition_b -> else
Rule 78    condition_b -> empty
Rule 79    elseif -> ELSE IF expression block
Rule 80    else -> ELSE block
Rule 81    expression -> comparison expression_a
Rule 82    expression_a -> AND expression
Rule 83    expression_a -> OR expression
Rule 84    expression_a -> empty
Rule 85    comparison -> exp comparison_a
Rule 86    comparison_a -> comparison_b exp
Rule 87    comparison_a -> empty
Rule 88    comparison_b -> GEQ
Rule 89    comparison_b -> LEQ
Rule 90    comparison_b -> GT
Rule 91    comparison_b -> LT
Rule 92    comparison_b -> EQUAL
Rule 93    comparison_b -> NEQ
Rule 94    exp -> term exp_a
Rule 95    exp_a -> PLUS exp
Rule 96    exp_a -> MINUS exp
Rule 97    exp_a -> empty
Rule 98    term -> factor term_a
Rule 99    term_a -> MUL term
Rule 100   term_a -> DIV term
Rule 101   term_a -> empty
Rule 102   factor -> LP expression RP
Rule 103   factor -> factor_a var_cte
Rule 104   factor_a -> PLUS
Rule 105   factor_a -> MINUS
Rule 106   factor_a -> NOT
Rule 107   factor_a -> empty
Rule 108   var_cte -> ID array attribute
Rule 109   var_cte -> ID LP call_params RP array attribute
Rule 110   var_cte -> CTE_I
Rule 111   var_cte -> CTE_F
Rule 112   var_cte -> CTE_B
Rule 113   array -> LC expression RC array_a
Rule 114   array_a -> LC expression RC
Rule 115   array_a -> empty
Rule 116   attribute -> DOT ID attribute_a
Rule 117   attribute_a -> LP call_params RP
Rule 118   attribute_a -> empty
Rule 119   empty -> <empty>

Terminals, with rules where they appear

AND                  : 82
ARROW                : 26
BOOL                 : 16
CLASS                : 40
COL                  : 17 23 28 41
COMMA                : 30 72
CTE_B                : 22 112
CTE_F                : 21 111
CTE_I                : 10 10 11 20 110
CTE_S                : 65
DIV                  : 100
DOT                  : 116
ELSE                 : 79 80
EQUAL                : 92
FLOAT                : 15
FUNCTION             : 25
GEQ                  : 88
GT                   : 90
ID                   : 13 17 23 25 28 40 41 62 67 69 108 109 116
IF                   : 74 79
INIT                 : 53
INPUT                : 67
INT                  : 14
IS                   : 18 23 62
LB                   : 32 35 40
LC                   : 10 10 11 113 114
LEQ                  : 89
LET                  : 23
LP                   : 24 25 53 63 67 69 102 109 117
LT                   : 91
MAIN                 : 24
MINUS                : 96 105
MUL                  : 99
NEQ                  : 93
NOT                  : 106
OR                   : 83
PLUS                 : 95 104
PRINT                : 63
PRIVATE              : 45
RB                   : 32 35 40
RC                   : 10 10 11 113 114
RETURN               : 61
RP                   : 24 25 53 63 67 69 102 109 117
SEMICOL              : 17 23 61 62 63 67 69
VAR                  : 17
WHILE                : 68
error                : 

Nonterminals, with rules where they appear

array                : 62 67 108 109
array_a              : 113
assignment           : 56
atomic               : 10 11 12
attribute            : 62 67 108 109
attribute_a          : 116
block                : 53 68 74 79 80
block_a              : 32 33 35
call_function        : 59
call_params          : 69 109 117
call_params_a        : 70 72
class                : 5
class_a              : 40
class_b              : 40 43
class_c              : 40 49
class_d              : 40 51
class_e              : 43 51
class_f              : 43
comparison           : 81
comparison_a         : 85
comparison_b         : 86
condition            : 57
condition_a          : 74 75
condition_b          : 74
else                 : 77
elseif               : 75
empty                : 3 7 9 19 27 29 31 34 37 42 44 46 50 52 66 71 73 76 78 84 87 97 101 107 115 118
exp                  : 85 86 95 96
exp_a                : 94
expression           : 61 62 64 68 70 72 74 79 82 83 102 113 114
expression_a         : 81
factor               : 98
factor_a             : 103
function             : 8 51
function_a           : 25
function_block       : 24 25
function_block_a     : 35 36
function_block_b     : 36
init                 : 40 49
input                : 55
let                  : 4 39 48
loop                 : 58
main                 : 1
params               : 25 30 53
params_a             : 28
print                : 54
print_a              : 63
program              : 0
program_a            : 1 2
program_b            : 2
program_c            : 1 6
program_d            : 1 8
return               : 60
statute              : 33
term                 : 94 99 100
term_a               : 98
type                 : 17 23 26 28
var                  : 6 38 47
var_a                : 17
var_b                : 18 23
var_cte              : 103

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_a program_c program_d main
    (2) program_a -> . program_b program_a
    (3) program_a -> . empty
    (4) program_b -> . let
    (5) program_b -> . class
    (119) empty -> .
    (23) let -> . LET ID COL type IS var_b SEMICOL
    (40) class -> . CLASS ID class_a LB class_b init class_c class_d RB

    VAR             reduce using rule 119 (empty -> .)
    FUNCTION        reduce using rule 119 (empty -> .)
    MAIN            reduce using rule 119 (empty -> .)
    LET             shift and go to state 7
    CLASS           shift and go to state 8

    program                        shift and go to state 1
    program_a                      shift and go to state 2
    program_b                      shift and go to state 3
    empty                          shift and go to state 4
    let                            shift and go to state 5
    class                          shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> program_a . program_c program_d main
    (6) program_c -> . var program_c
    (7) program_c -> . empty
    (17) var -> . VAR ID COL type var_a SEMICOL
    (119) empty -> .

    VAR             shift and go to state 12
    FUNCTION        reduce using rule 119 (empty -> .)
    MAIN            reduce using rule 119 (empty -> .)

    program_c                      shift and go to state 9
    var                            shift and go to state 10
    empty                          shift and go to state 11

state 3

    (2) program_a -> program_b . program_a
    (2) program_a -> . program_b program_a
    (3) program_a -> . empty
    (4) program_b -> . let
    (5) program_b -> . class
    (119) empty -> .
    (23) let -> . LET ID COL type IS var_b SEMICOL
    (40) class -> . CLASS ID class_a LB class_b init class_c class_d RB

    VAR             reduce using rule 119 (empty -> .)
    FUNCTION        reduce using rule 119 (empty -> .)
    MAIN            reduce using rule 119 (empty -> .)
    LET             shift and go to state 7
    CLASS           shift and go to state 8

    program_b                      shift and go to state 3
    program_a                      shift and go to state 13
    empty                          shift and go to state 4
    let                            shift and go to state 5
    class                          shift and go to state 6

state 4

    (3) program_a -> empty .

    VAR             reduce using rule 3 (program_a -> empty .)
    FUNCTION        reduce using rule 3 (program_a -> empty .)
    MAIN            reduce using rule 3 (program_a -> empty .)


state 5

    (4) program_b -> let .

    LET             reduce using rule 4 (program_b -> let .)
    CLASS           reduce using rule 4 (program_b -> let .)
    VAR             reduce using rule 4 (program_b -> let .)
    FUNCTION        reduce using rule 4 (program_b -> let .)
    MAIN            reduce using rule 4 (program_b -> let .)


state 6

    (5) program_b -> class .

    LET             reduce using rule 5 (program_b -> class .)
    CLASS           reduce using rule 5 (program_b -> class .)
    VAR             reduce using rule 5 (program_b -> class .)
    FUNCTION        reduce using rule 5 (program_b -> class .)
    MAIN            reduce using rule 5 (program_b -> class .)


state 7

    (23) let -> LET . ID COL type IS var_b SEMICOL

    ID              shift and go to state 14


state 8

    (40) class -> CLASS . ID class_a LB class_b init class_c class_d RB

    ID              shift and go to state 15


state 9

    (1) program -> program_a program_c . program_d main
    (8) program_d -> . function program_d
    (9) program_d -> . empty
    (25) function -> . FUNCTION ID LP params RP function_a function_block
    (119) empty -> .

    FUNCTION        shift and go to state 19
    MAIN            reduce using rule 119 (empty -> .)

    program_d                      shift and go to state 16
    function                       shift and go to state 17
    empty                          shift and go to state 18

state 10

    (6) program_c -> var . program_c
    (6) program_c -> . var program_c
    (7) program_c -> . empty
    (17) var -> . VAR ID COL type var_a SEMICOL
    (119) empty -> .

    VAR             shift and go to state 12
    FUNCTION        reduce using rule 119 (empty -> .)
    MAIN            reduce using rule 119 (empty -> .)

    var                            shift and go to state 10
    program_c                      shift and go to state 20
    empty                          shift and go to state 11

state 11

    (7) program_c -> empty .

    FUNCTION        reduce using rule 7 (program_c -> empty .)
    MAIN            reduce using rule 7 (program_c -> empty .)


state 12

    (17) var -> VAR . ID COL type var_a SEMICOL

    ID              shift and go to state 21


state 13

    (2) program_a -> program_b program_a .

    VAR             reduce using rule 2 (program_a -> program_b program_a .)
    FUNCTION        reduce using rule 2 (program_a -> program_b program_a .)
    MAIN            reduce using rule 2 (program_a -> program_b program_a .)


state 14

    (23) let -> LET ID . COL type IS var_b SEMICOL

    COL             shift and go to state 22


state 15

    (40) class -> CLASS ID . class_a LB class_b init class_c class_d RB
    (41) class_a -> . COL ID
    (42) class_a -> . empty
    (119) empty -> .

    COL             shift and go to state 24
    LB              reduce using rule 119 (empty -> .)

    class_a                        shift and go to state 23
    empty                          shift and go to state 25

state 16

    (1) program -> program_a program_c program_d . main
    (24) main -> . MAIN LP RP function_block

    MAIN            shift and go to state 27

    main                           shift and go to state 26

state 17

    (8) program_d -> function . program_d
    (8) program_d -> . function program_d
    (9) program_d -> . empty
    (25) function -> . FUNCTION ID LP params RP function_a function_block
    (119) empty -> .

    FUNCTION        shift and go to state 19
    MAIN            reduce using rule 119 (empty -> .)

    function                       shift and go to state 17
    program_d                      shift and go to state 28
    empty                          shift and go to state 18

state 18

    (9) program_d -> empty .

    MAIN            reduce using rule 9 (program_d -> empty .)


state 19

    (25) function -> FUNCTION . ID LP params RP function_a function_block

    ID              shift and go to state 29


state 20

    (6) program_c -> var program_c .

    FUNCTION        reduce using rule 6 (program_c -> var program_c .)
    MAIN            reduce using rule 6 (program_c -> var program_c .)


state 21

    (17) var -> VAR ID . COL type var_a SEMICOL

    COL             shift and go to state 30


state 22

    (23) let -> LET ID COL . type IS var_b SEMICOL
    (10) type -> . LC CTE_I RC LC CTE_I RC atomic
    (11) type -> . LC CTE_I RC atomic
    (12) type -> . atomic
    (13) type -> . ID
    (14) atomic -> . INT
    (15) atomic -> . FLOAT
    (16) atomic -> . BOOL

    LC              shift and go to state 33
    ID              shift and go to state 31
    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    BOOL            shift and go to state 37

    type                           shift and go to state 32
    atomic                         shift and go to state 34

state 23

    (40) class -> CLASS ID class_a . LB class_b init class_c class_d RB

    LB              shift and go to state 38


state 24

    (41) class_a -> COL . ID

    ID              shift and go to state 39


state 25

    (42) class_a -> empty .

    LB              reduce using rule 42 (class_a -> empty .)


state 26

    (1) program -> program_a program_c program_d main .

    $end            reduce using rule 1 (program -> program_a program_c program_d main .)


state 27

    (24) main -> MAIN . LP RP function_block

    LP              shift and go to state 40


state 28

    (8) program_d -> function program_d .

    MAIN            reduce using rule 8 (program_d -> function program_d .)


state 29

    (25) function -> FUNCTION ID . LP params RP function_a function_block

    LP              shift and go to state 41


state 30

    (17) var -> VAR ID COL . type var_a SEMICOL
    (10) type -> . LC CTE_I RC LC CTE_I RC atomic
    (11) type -> . LC CTE_I RC atomic
    (12) type -> . atomic
    (13) type -> . ID
    (14) atomic -> . INT
    (15) atomic -> . FLOAT
    (16) atomic -> . BOOL

    LC              shift and go to state 33
    ID              shift and go to state 31
    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    BOOL            shift and go to state 37

    type                           shift and go to state 42
    atomic                         shift and go to state 34

state 31

    (13) type -> ID .

    IS              reduce using rule 13 (type -> ID .)
    SEMICOL         reduce using rule 13 (type -> ID .)
    COMMA           reduce using rule 13 (type -> ID .)
    RP              reduce using rule 13 (type -> ID .)
    LB              reduce using rule 13 (type -> ID .)


state 32

    (23) let -> LET ID COL type . IS var_b SEMICOL

    IS              shift and go to state 43


state 33

    (10) type -> LC . CTE_I RC LC CTE_I RC atomic
    (11) type -> LC . CTE_I RC atomic

    CTE_I           shift and go to state 44


state 34

    (12) type -> atomic .

    IS              reduce using rule 12 (type -> atomic .)
    SEMICOL         reduce using rule 12 (type -> atomic .)
    COMMA           reduce using rule 12 (type -> atomic .)
    RP              reduce using rule 12 (type -> atomic .)
    LB              reduce using rule 12 (type -> atomic .)


state 35

    (14) atomic -> INT .

    IS              reduce using rule 14 (atomic -> INT .)
    SEMICOL         reduce using rule 14 (atomic -> INT .)
    COMMA           reduce using rule 14 (atomic -> INT .)
    RP              reduce using rule 14 (atomic -> INT .)
    LB              reduce using rule 14 (atomic -> INT .)


state 36

    (15) atomic -> FLOAT .

    IS              reduce using rule 15 (atomic -> FLOAT .)
    SEMICOL         reduce using rule 15 (atomic -> FLOAT .)
    COMMA           reduce using rule 15 (atomic -> FLOAT .)
    RP              reduce using rule 15 (atomic -> FLOAT .)
    LB              reduce using rule 15 (atomic -> FLOAT .)


state 37

    (16) atomic -> BOOL .

    IS              reduce using rule 16 (atomic -> BOOL .)
    SEMICOL         reduce using rule 16 (atomic -> BOOL .)
    COMMA           reduce using rule 16 (atomic -> BOOL .)
    RP              reduce using rule 16 (atomic -> BOOL .)
    LB              reduce using rule 16 (atomic -> BOOL .)


state 38

    (40) class -> CLASS ID class_a LB . class_b init class_c class_d RB
    (43) class_b -> . class_e class_f class_b
    (44) class_b -> . empty
    (45) class_e -> . PRIVATE
    (46) class_e -> . empty
    (119) empty -> .

    PRIVATE         shift and go to state 48
    INIT            reduce using rule 119 (empty -> .)
    VAR             reduce using rule 119 (empty -> .)
    LET             reduce using rule 119 (empty -> .)

    class_b                        shift and go to state 45
    class_e                        shift and go to state 46
    empty                          shift and go to state 47

state 39

    (41) class_a -> COL ID .

    LB              reduce using rule 41 (class_a -> COL ID .)


state 40

    (24) main -> MAIN LP . RP function_block

    RP              shift and go to state 49


state 41

    (25) function -> FUNCTION ID LP . params RP function_a function_block
    (28) params -> . ID COL type params_a
    (29) params -> . empty
    (119) empty -> .

    ID              shift and go to state 50
    RP              reduce using rule 119 (empty -> .)

    params                         shift and go to state 51
    empty                          shift and go to state 52

state 42

    (17) var -> VAR ID COL type . var_a SEMICOL
    (18) var_a -> . IS var_b
    (19) var_a -> . empty
    (119) empty -> .

    IS              shift and go to state 54
    SEMICOL         reduce using rule 119 (empty -> .)

    var_a                          shift and go to state 53
    empty                          shift and go to state 55

state 43

    (23) let -> LET ID COL type IS . var_b SEMICOL
    (20) var_b -> . CTE_I
    (21) var_b -> . CTE_F
    (22) var_b -> . CTE_B

    CTE_I           shift and go to state 57
    CTE_F           shift and go to state 58
    CTE_B           shift and go to state 59

    var_b                          shift and go to state 56

state 44

    (10) type -> LC CTE_I . RC LC CTE_I RC atomic
    (11) type -> LC CTE_I . RC atomic

    RC              shift and go to state 60


state 45

    (40) class -> CLASS ID class_a LB class_b . init class_c class_d RB
    (53) init -> . INIT LP params RP block

    INIT            shift and go to state 62

    init                           shift and go to state 61

state 46

    (43) class_b -> class_e . class_f class_b
    (47) class_f -> . var
    (48) class_f -> . let
    (17) var -> . VAR ID COL type var_a SEMICOL
    (23) let -> . LET ID COL type IS var_b SEMICOL

    VAR             shift and go to state 12
    LET             shift and go to state 7

    class_f                        shift and go to state 63
    var                            shift and go to state 64
    let                            shift and go to state 65

state 47

    (44) class_b -> empty .
    (46) class_e -> empty .

    INIT            reduce using rule 44 (class_b -> empty .)
    VAR             reduce using rule 46 (class_e -> empty .)
    LET             reduce using rule 46 (class_e -> empty .)


state 48

    (45) class_e -> PRIVATE .

    VAR             reduce using rule 45 (class_e -> PRIVATE .)
    LET             reduce using rule 45 (class_e -> PRIVATE .)
    FUNCTION        reduce using rule 45 (class_e -> PRIVATE .)


state 49

    (24) main -> MAIN LP RP . function_block
    (35) function_block -> . LB function_block_a block_a RB

    LB              shift and go to state 67

    function_block                 shift and go to state 66

state 50

    (28) params -> ID . COL type params_a

    COL             shift and go to state 68


state 51

    (25) function -> FUNCTION ID LP params . RP function_a function_block

    RP              shift and go to state 69


state 52

    (29) params -> empty .

    RP              reduce using rule 29 (params -> empty .)


state 53

    (17) var -> VAR ID COL type var_a . SEMICOL

    SEMICOL         shift and go to state 70


state 54

    (18) var_a -> IS . var_b
    (20) var_b -> . CTE_I
    (21) var_b -> . CTE_F
    (22) var_b -> . CTE_B

    CTE_I           shift and go to state 57
    CTE_F           shift and go to state 58
    CTE_B           shift and go to state 59

    var_b                          shift and go to state 71

state 55

    (19) var_a -> empty .

    SEMICOL         reduce using rule 19 (var_a -> empty .)


state 56

    (23) let -> LET ID COL type IS var_b . SEMICOL

    SEMICOL         shift and go to state 72


state 57

    (20) var_b -> CTE_I .

    SEMICOL         reduce using rule 20 (var_b -> CTE_I .)


state 58

    (21) var_b -> CTE_F .

    SEMICOL         reduce using rule 21 (var_b -> CTE_F .)


state 59

    (22) var_b -> CTE_B .

    SEMICOL         reduce using rule 22 (var_b -> CTE_B .)


state 60

    (10) type -> LC CTE_I RC . LC CTE_I RC atomic
    (11) type -> LC CTE_I RC . atomic
    (14) atomic -> . INT
    (15) atomic -> . FLOAT
    (16) atomic -> . BOOL

    LC              shift and go to state 73
    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    BOOL            shift and go to state 37

    atomic                         shift and go to state 74

state 61

    (40) class -> CLASS ID class_a LB class_b init . class_c class_d RB
    (49) class_c -> . init class_c
    (50) class_c -> . empty
    (53) init -> . INIT LP params RP block
    (119) empty -> .

    INIT            shift and go to state 62
    PRIVATE         reduce using rule 119 (empty -> .)
    RB              reduce using rule 119 (empty -> .)
    FUNCTION        reduce using rule 119 (empty -> .)

    init                           shift and go to state 75
    class_c                        shift and go to state 76
    empty                          shift and go to state 77

state 62

    (53) init -> INIT . LP params RP block

    LP              shift and go to state 78


state 63

    (43) class_b -> class_e class_f . class_b
    (43) class_b -> . class_e class_f class_b
    (44) class_b -> . empty
    (45) class_e -> . PRIVATE
    (46) class_e -> . empty
    (119) empty -> .

    PRIVATE         shift and go to state 48
    INIT            reduce using rule 119 (empty -> .)
    VAR             reduce using rule 119 (empty -> .)
    LET             reduce using rule 119 (empty -> .)

    class_e                        shift and go to state 46
    class_b                        shift and go to state 79
    empty                          shift and go to state 47

state 64

    (47) class_f -> var .

    PRIVATE         reduce using rule 47 (class_f -> var .)
    VAR             reduce using rule 47 (class_f -> var .)
    LET             reduce using rule 47 (class_f -> var .)
    INIT            reduce using rule 47 (class_f -> var .)


state 65

    (48) class_f -> let .

    PRIVATE         reduce using rule 48 (class_f -> let .)
    VAR             reduce using rule 48 (class_f -> let .)
    LET             reduce using rule 48 (class_f -> let .)
    INIT            reduce using rule 48 (class_f -> let .)


state 66

    (24) main -> MAIN LP RP function_block .

    $end            reduce using rule 24 (main -> MAIN LP RP function_block .)


state 67

    (35) function_block -> LB . function_block_a block_a RB
    (36) function_block_a -> . function_block_b function_block_a
    (37) function_block_a -> . empty
    (38) function_block_b -> . var
    (39) function_block_b -> . let
    (119) empty -> .
    (17) var -> . VAR ID COL type var_a SEMICOL
    (23) let -> . LET ID COL type IS var_b SEMICOL

    PRINT           reduce using rule 119 (empty -> .)
    INPUT           reduce using rule 119 (empty -> .)
    ID              reduce using rule 119 (empty -> .)
    IF              reduce using rule 119 (empty -> .)
    WHILE           reduce using rule 119 (empty -> .)
    RETURN          reduce using rule 119 (empty -> .)
    RB              reduce using rule 119 (empty -> .)
    VAR             shift and go to state 12
    LET             shift and go to state 7

    function_block_a               shift and go to state 80
    function_block_b               shift and go to state 81
    empty                          shift and go to state 82
    var                            shift and go to state 83
    let                            shift and go to state 84

state 68

    (28) params -> ID COL . type params_a
    (10) type -> . LC CTE_I RC LC CTE_I RC atomic
    (11) type -> . LC CTE_I RC atomic
    (12) type -> . atomic
    (13) type -> . ID
    (14) atomic -> . INT
    (15) atomic -> . FLOAT
    (16) atomic -> . BOOL

    LC              shift and go to state 33
    ID              shift and go to state 31
    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    BOOL            shift and go to state 37

    type                           shift and go to state 85
    atomic                         shift and go to state 34

state 69

    (25) function -> FUNCTION ID LP params RP . function_a function_block
    (26) function_a -> . ARROW type
    (27) function_a -> . empty
    (119) empty -> .

    ARROW           shift and go to state 87
    LB              reduce using rule 119 (empty -> .)

    function_a                     shift and go to state 86
    empty                          shift and go to state 88

state 70

    (17) var -> VAR ID COL type var_a SEMICOL .

    VAR             reduce using rule 17 (var -> VAR ID COL type var_a SEMICOL .)
    FUNCTION        reduce using rule 17 (var -> VAR ID COL type var_a SEMICOL .)
    MAIN            reduce using rule 17 (var -> VAR ID COL type var_a SEMICOL .)
    PRIVATE         reduce using rule 17 (var -> VAR ID COL type var_a SEMICOL .)
    LET             reduce using rule 17 (var -> VAR ID COL type var_a SEMICOL .)
    INIT            reduce using rule 17 (var -> VAR ID COL type var_a SEMICOL .)
    PRINT           reduce using rule 17 (var -> VAR ID COL type var_a SEMICOL .)
    INPUT           reduce using rule 17 (var -> VAR ID COL type var_a SEMICOL .)
    ID              reduce using rule 17 (var -> VAR ID COL type var_a SEMICOL .)
    IF              reduce using rule 17 (var -> VAR ID COL type var_a SEMICOL .)
    WHILE           reduce using rule 17 (var -> VAR ID COL type var_a SEMICOL .)
    RETURN          reduce using rule 17 (var -> VAR ID COL type var_a SEMICOL .)
    RB              reduce using rule 17 (var -> VAR ID COL type var_a SEMICOL .)


state 71

    (18) var_a -> IS var_b .

    SEMICOL         reduce using rule 18 (var_a -> IS var_b .)


state 72

    (23) let -> LET ID COL type IS var_b SEMICOL .

    LET             reduce using rule 23 (let -> LET ID COL type IS var_b SEMICOL .)
    CLASS           reduce using rule 23 (let -> LET ID COL type IS var_b SEMICOL .)
    VAR             reduce using rule 23 (let -> LET ID COL type IS var_b SEMICOL .)
    FUNCTION        reduce using rule 23 (let -> LET ID COL type IS var_b SEMICOL .)
    MAIN            reduce using rule 23 (let -> LET ID COL type IS var_b SEMICOL .)
    PRIVATE         reduce using rule 23 (let -> LET ID COL type IS var_b SEMICOL .)
    INIT            reduce using rule 23 (let -> LET ID COL type IS var_b SEMICOL .)
    PRINT           reduce using rule 23 (let -> LET ID COL type IS var_b SEMICOL .)
    INPUT           reduce using rule 23 (let -> LET ID COL type IS var_b SEMICOL .)
    ID              reduce using rule 23 (let -> LET ID COL type IS var_b SEMICOL .)
    IF              reduce using rule 23 (let -> LET ID COL type IS var_b SEMICOL .)
    WHILE           reduce using rule 23 (let -> LET ID COL type IS var_b SEMICOL .)
    RETURN          reduce using rule 23 (let -> LET ID COL type IS var_b SEMICOL .)
    RB              reduce using rule 23 (let -> LET ID COL type IS var_b SEMICOL .)


state 73

    (10) type -> LC CTE_I RC LC . CTE_I RC atomic

    CTE_I           shift and go to state 89


state 74

    (11) type -> LC CTE_I RC atomic .

    IS              reduce using rule 11 (type -> LC CTE_I RC atomic .)
    SEMICOL         reduce using rule 11 (type -> LC CTE_I RC atomic .)
    COMMA           reduce using rule 11 (type -> LC CTE_I RC atomic .)
    RP              reduce using rule 11 (type -> LC CTE_I RC atomic .)
    LB              reduce using rule 11 (type -> LC CTE_I RC atomic .)


state 75

    (49) class_c -> init . class_c
    (49) class_c -> . init class_c
    (50) class_c -> . empty
    (53) init -> . INIT LP params RP block
    (119) empty -> .

    INIT            shift and go to state 62
    PRIVATE         reduce using rule 119 (empty -> .)
    RB              reduce using rule 119 (empty -> .)
    FUNCTION        reduce using rule 119 (empty -> .)

    init                           shift and go to state 75
    class_c                        shift and go to state 90
    empty                          shift and go to state 77

state 76

    (40) class -> CLASS ID class_a LB class_b init class_c . class_d RB
    (51) class_d -> . class_e function class_d
    (52) class_d -> . empty
    (45) class_e -> . PRIVATE
    (46) class_e -> . empty
    (119) empty -> .

    PRIVATE         shift and go to state 48
    RB              reduce using rule 119 (empty -> .)
    FUNCTION        reduce using rule 119 (empty -> .)

    class_d                        shift and go to state 91
    class_e                        shift and go to state 92
    empty                          shift and go to state 93

state 77

    (50) class_c -> empty .

    PRIVATE         reduce using rule 50 (class_c -> empty .)
    RB              reduce using rule 50 (class_c -> empty .)
    FUNCTION        reduce using rule 50 (class_c -> empty .)


state 78

    (53) init -> INIT LP . params RP block
    (28) params -> . ID COL type params_a
    (29) params -> . empty
    (119) empty -> .

    ID              shift and go to state 50
    RP              reduce using rule 119 (empty -> .)

    params                         shift and go to state 94
    empty                          shift and go to state 52

state 79

    (43) class_b -> class_e class_f class_b .

    INIT            reduce using rule 43 (class_b -> class_e class_f class_b .)


state 80

    (35) function_block -> LB function_block_a . block_a RB
    (33) block_a -> . statute block_a
    (34) block_a -> . empty
    (54) statute -> . print
    (55) statute -> . input
    (56) statute -> . assignment
    (57) statute -> . condition
    (58) statute -> . loop
    (59) statute -> . call_function
    (60) statute -> . return
    (119) empty -> .
    (63) print -> . PRINT LP print_a RP SEMICOL
    (67) input -> . INPUT LP ID array attribute RP SEMICOL
    (62) assignment -> . ID array attribute IS expression SEMICOL
    (74) condition -> . IF expression block condition_a condition_b
    (68) loop -> . WHILE expression block
    (69) call_function -> . ID LP call_params RP SEMICOL
    (61) return -> . RETURN expression SEMICOL

    RB              reduce using rule 119 (empty -> .)
    PRINT           shift and go to state 105
    INPUT           shift and go to state 106
    ID              shift and go to state 107
    IF              shift and go to state 108
    WHILE           shift and go to state 109
    RETURN          shift and go to state 110

    block_a                        shift and go to state 95
    statute                        shift and go to state 96
    empty                          shift and go to state 97
    print                          shift and go to state 98
    input                          shift and go to state 99
    assignment                     shift and go to state 100
    condition                      shift and go to state 101
    loop                           shift and go to state 102
    call_function                  shift and go to state 103
    return                         shift and go to state 104

state 81

    (36) function_block_a -> function_block_b . function_block_a
    (36) function_block_a -> . function_block_b function_block_a
    (37) function_block_a -> . empty
    (38) function_block_b -> . var
    (39) function_block_b -> . let
    (119) empty -> .
    (17) var -> . VAR ID COL type var_a SEMICOL
    (23) let -> . LET ID COL type IS var_b SEMICOL

    PRINT           reduce using rule 119 (empty -> .)
    INPUT           reduce using rule 119 (empty -> .)
    ID              reduce using rule 119 (empty -> .)
    IF              reduce using rule 119 (empty -> .)
    WHILE           reduce using rule 119 (empty -> .)
    RETURN          reduce using rule 119 (empty -> .)
    RB              reduce using rule 119 (empty -> .)
    VAR             shift and go to state 12
    LET             shift and go to state 7

    function_block_b               shift and go to state 81
    function_block_a               shift and go to state 111
    empty                          shift and go to state 82
    var                            shift and go to state 83
    let                            shift and go to state 84

state 82

    (37) function_block_a -> empty .

    PRINT           reduce using rule 37 (function_block_a -> empty .)
    INPUT           reduce using rule 37 (function_block_a -> empty .)
    ID              reduce using rule 37 (function_block_a -> empty .)
    IF              reduce using rule 37 (function_block_a -> empty .)
    WHILE           reduce using rule 37 (function_block_a -> empty .)
    RETURN          reduce using rule 37 (function_block_a -> empty .)
    RB              reduce using rule 37 (function_block_a -> empty .)


state 83

    (38) function_block_b -> var .

    VAR             reduce using rule 38 (function_block_b -> var .)
    LET             reduce using rule 38 (function_block_b -> var .)
    PRINT           reduce using rule 38 (function_block_b -> var .)
    INPUT           reduce using rule 38 (function_block_b -> var .)
    ID              reduce using rule 38 (function_block_b -> var .)
    IF              reduce using rule 38 (function_block_b -> var .)
    WHILE           reduce using rule 38 (function_block_b -> var .)
    RETURN          reduce using rule 38 (function_block_b -> var .)
    RB              reduce using rule 38 (function_block_b -> var .)


state 84

    (39) function_block_b -> let .

    VAR             reduce using rule 39 (function_block_b -> let .)
    LET             reduce using rule 39 (function_block_b -> let .)
    PRINT           reduce using rule 39 (function_block_b -> let .)
    INPUT           reduce using rule 39 (function_block_b -> let .)
    ID              reduce using rule 39 (function_block_b -> let .)
    IF              reduce using rule 39 (function_block_b -> let .)
    WHILE           reduce using rule 39 (function_block_b -> let .)
    RETURN          reduce using rule 39 (function_block_b -> let .)
    RB              reduce using rule 39 (function_block_b -> let .)


state 85
